--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,23 @@ services:
             context: ./decker
             dockerfile: php.Dockerfile
         volumes:
-
-        
+            - './app:/var/www/html'
+        depends_on:
+            - mariadb
+    nginx:
+        image: nginx:latest
+        ports:
+            - '80:80'
+            - '443:443'
+        links:
+            - 'php'
+        volumes:
+            - './app/var/www/html'
+            - './congig/nginx:/etc/nginx/conf.d'
+    mariadb:
+        image: mariadb:11
+        restart: 'on-failure'
+        environment:
+            - MYSQL_ROOT_PASSWORD: 'secret'
+        volumes:
+            - ./mysql:/var/lib/mysql
