--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,6 @@ services:
         image: mariadb:11
         restart: 'on-failure'
         environment:
-            - MYSQL_ROOT_PASSWORD: 'secret'
+            MYSQL_ROOT_PASSWORD: 'secret'
         volumes:
             - ./mysql:/var/lib/mysql
