--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     php:
         build: 
-            context: ./decker
+            context: ./docker
             dockerfile: php.Dockerfile
         volumes:
             - './app:/var/www/html'
